// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <Connect(ExpenseListItem)
    amount={2.2}
    createdAt={0}
    desc="Gum"
    id="1"
    key="1"
    note="note"
  />
  <Connect(ExpenseListItem)
    amount={4.2}
    createdAt={-345600000}
    desc="Coke"
    id="2"
    key="2"
    note="note2"
  />
  <Connect(ExpenseListItem)
    amount={100.2}
    createdAt={345600000}
    desc="Card"
    id="3"
    key="3"
    note="note3"
  />
</div>
`;
